--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -29,5 +29,5 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
 
-      - name: Run tests
+      - name: Run Linter
         run: uv run flake8 src/.
