--- a/.github/workflows/lint_and_test.yaml
+++ b/.github/workflows/lint_and_test.yaml
@@ -31,3 +31,28 @@ jobs:
 
       - name: Run Linter
         run: uv run flake8 src/.
+
+    
+    pytest:
+      needs: flake8-lint
+      runs-on: ubuntu-latest 
+      timeout-minutes: 10
+
+      name: Pytest
+      # Steps represent a sequence of tasks that will be executed as part of the job
+      steps:
+      - uses: actions/checkout@v3
+      - name: "Set up Python"
+        uses: actions/setup-python@v6
+        with:
+          python-version-file: "pyproject.toml"
+      
+      - name: Install uv
+        uses: astral-sh/setup-uv@v7
+
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      
+      - name: Test with pytest
+        run: |
+          uv run pytest tests/ -v
